src/ui/snapshots/cctop__ui__snapshot__settings_filtered_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Settings ─────────────────────────────────────────────────────── /alert when ╮
│  File ~/.config/cctop/config.toml                                            │
│                                                                              │
│config.toml · [settings]                                                      │
│  notify            false            Bell + desktop alert when a session needs│
│you                                                                           │
│  alert_cost        0                Alert when a session's cost passes $X    │
│  alert_burn        0                Alert when a session burns over $X an    │
│hour                                                                          │
│  alert_today       0                Alert when today's spend passes $X       │
│  alert_errors      0                Alert when X% of 10m of tool calls fail  │
│(try 25)                                                                      │
│  alert_stall       0                Alert when a working agent writes nothing│
│for X min (try 10)                                                            │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
/ Filter ↵ Change ⌫ Reset e Edit file , Back Alt+←→ Tabs F1 Help        ⧉ share
